# vault-dweller

./: Cargo.toml
src/: dataview.rs  lib.rs
tests/: vault_index_tests.rs
tests/TestVault/: This is the Test Vault.md
tests/TestVault/.obsidian/: workspace.json
tests/TestVault/Folder A/: Lorem Ipsum.md  Vivamus Pharetra.md
