[package]
name = "vault_dweller"
description = "Makes working with Obsidian vvaults more convenient."
keywords = ["obsidian"]
license = "MIT"
version = "0.1.0"
authors = ["Enda Hallahan <41527196+EndaHallahan@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/vault_dweller/"
repository = "https://github.com/EndaHallahan/vault-dweller"
exclude = [
	"tests",
	".github",
]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
fancy-regex = "0.14.0"
indexmap = "2.6.0"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
yaml-rust = "0.4.5"

[lib]
name="vault_dweller"
